fix: action buttons visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ a:active {
   text-decoration: none;
 }
 
-#sfInfo {
+#sfProperties {
   display: flex;
 }
 
